RAIN-6840 : BND Help section misalignment fixed

--- a/frontend/mono-ui/web/rainmaker/dev-packages/egov-bnd-dev/src/ui-config/screens/specs/birth-common/birthSearchResources/index.scss
+++ b/frontend/mono-ui/web/rainmaker/dev-packages/egov-bnd-dev/src/ui-config/screens/specs/birth-common/birthSearchResources/index.scss
@@ -10,3 +10,23 @@
 	max-height: 150px;
     overflow: auto;
   }
+
+  @media only screen and (max-width: 768px) {
+
+    .bd-search-header{
+      #custom-atoms-headerDiv{
+        flex-flow:row;
+        }
+    }
+    .bd-btn-hiw{
+      flex-basis: unset;
+      align-self: self-end;
+      div{
+        max-width:unset;
+        flex-basis: unset;
+  button{
+  min-width: none;
+  }
+      }
+    }
+  }
